
[package]
name = "ultrasecure-messenger-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "encryption_engine"
path = "server/main.rs"

[[bin]]
name = "message_processor" 
path = "server/message_processor.rs"

[dependencies]
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
blake3 = "1.5"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
